# CapIoT

./: .gitignore  README.md  SETUP.md  pyproject.toml
config/: config.yaml  sleep_times.yaml
config/examples/: android.lan.config.yaml  device_coordinates.txt  image_crop_data.json  ios.wan.config.yaml  iptables_down.sh  iptables_up.sh
src/capiot/: cli.py  config.py  context.py
src/capiot/actions/: iptables.py  user_interaction.py
src/capiot/communication/: android.py  ios.py  mqtt_message.py  server.py  ssh.py
src/capiot/dumpers/: android_dump.py  ios_dump.py
src/capiot/recorders/: record_coordinates_android.py  record_coordinates_ios.py
src/capiot/runners/: __init__.py  android_lan.py  android_wan.py  ios_lan.py  ios_wan.py
src/capiot/utils/: check_image_similarity.py  process_handler.py  sleep_times.py
tests/: test_check_image_similarity.py  test_config.py  test_context.py  test_process_handler.py  test_sleep_times.py
